--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pg-bricks",
-  "version": "0.6.0",
+  "name": "pg-bricks-onode",
+  "version": "0.7.1",
   "description": "Higher level PostgreSQL client",
   "keywords": [
     "postgres",
@@ -18,15 +18,15 @@
     "transaction",
     "stream"
   ],
-  "author": "Alexander Schepanovski",
-  "homepage": "http://github.com/Suor/pg-bricks",
+  "author": "Alexander Schepanovski, JJhesk",
+  "homepage": "https://github.com/ONode/pg-bricks",
   "license": "BSD-2-Clause",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Suor/pg-bricks"
+    "url": "https://github.com/ONode/pg-bricks"
   },
   "bugs": {
-    "url": "https://github.com/Suor/pg-bricks/issues"
+    "url": "https://github.com/ONode/pg-bricks/issues"
   },
   "main": "index.js",
   "scripts": {
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "debug": "~2.2.0",
-    "pg": "^7.1",
+    "pg": "^7.4.1",
     "point-free": "0.7.0",
     "sql-bricks-postgres": ">=0.3.0"
   },
